# KoyomiBot

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  DeleteDb0Profiles.py  Dockerfile  Pipfile  README.md  README.txt  Start.bat  bot.py  docker-compose.yml  main.py  mypy.ini  pylama.ini  pyproject.toml  rebuild_and_run.sh  requirements.txt  run.py  start.sh
.config/: flake8
Deprecated/: bot.py  checks.py
broken_modules/: animehangman.py  blackjack.py  image.py  interactions.py  musicplayer.py  pad.py  slots.py  tags.py  todo.py  weather.py  wordcount.py
config/: ignore.json
koyomibot/: main.py  run.py
koyomibot/broken_modules/: animehangman.py  blackjack.py  discordbots.py  image.py  interactions.py  overwatch.py  pad.py  ryzen.py  slots.py  tags.py  todo.py  weather.py  wordcount.py
koyomibot/disabled_modules/: forex.py
koyomibot/modules/: admin.py  animals.py  anime.py  comics.py  discordbots.py  dragalia.py  forex.py  gfycat.py  guild.py  info.py  interactions.py  jon.py  kanji.py  mail.py  music.py  osu.py  random.py  search.py  slots.py  stocks.py  weather.py
koyomibot/utility/: allowed_guilds.py  config.py  db.py  discordembed.py  log.py  reactions.py
modules/: admin.py  animals.py  anime.py  animehangman.py  blackjack.py  cleverbot.py  comics.py  discordbots.py  dragalia.py  example.py  forex.py  gfycat.py  guild.py  image.py  info.py  interactions.py  log.py  mail.py  music.py  musicplayer.py  musicplayer_rewrite.py  osu.py  overwatch.py  pad.py  profile.py  random.py  ryzen.py  sample.py  search.py  slots.py  tags.py  todo.py  weather.py  wordcount.py
utility/: config.py  db.py  discordembed.py  koyomiuser.py  redis.py
