[tool.poetry]
name = "koyomibot"
version = "0.1.0"
description = ""
authors = ["xNinjaKittyx <sangbumahn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
youtube_dl = "^2020.03"
aiofiles = "^0.5.0"
aiohttp = "^3.5"
aioredis = "^1.3"
beautifulsoup4 = "^4.8"
cleverwrap = "^0.3.0"
click = "^7.0"
"discord.py" = {version = "^1.2", extras = ["voice"]}
motor = "^2.1"
pymongo = "^3.10"
simplefuzzyset = "^0.0.12"
toml = "^0.10.0"
uvloop = "^0.14.0"
wikipedia = "^1.4"
xmltodict = "^0.12.0"
async_timeout = "^3.0.1"
python-rapidjson = "^0.9.1"
iexfinance = "^0.5.0"
matplotlib = "^3.3.3"
pyarrow = "^2.0.0"


[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
botrun = 'koyomibot.run:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
