[tool.poetry]
name = "koyomibot"
version = "0.1.0"
description = ""
authors = ["xNinjaKittyx <sangbumahn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
py-cord = { git = "https://github.com/Pycord-Development/pycord.git", branch = "master", extras = ["speed", "voice"] }
PyNaCl = "^1.4.0"
aiodns = "^3.0.0"
Brotli = "^1.0.9"
cchardet = "^2.1.7"
orjson = "^3.6.5"
beautifulsoup4 = "^4.10.0"
atoml = "^1.1.1"
aioredis = "^2.0.0"
motor = "^2.5.1"
pandas = "^1.3.4"
pyarrow = "^6.0.1"
urlextract = "^1.4.0"
click = "^8.0.3"
uvloop = "^0.16.0"
yt-dlp = "^2021.12.1"
wikipedia = "^1.4.0"
xmltodict = "^0.12.0"


[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
botrun = 'koyomibot.run:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
